--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^12.1.1",
     "node-telegram-bot-api": "^0.30.0"
   }
 }
