--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,6 @@ services:
       dockerfile: Dockerfile.dev
     # ports:
       # - 5000:80
+    env_file: .env
     volumes:
       - ./services/worker/src:/app/src
