--- a/services/worker/Dockerfile.dev
+++ b/services/worker/Dockerfile.dev
@@ -1,6 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1
 ENV ASPNETCORE_URLS=http://+:80
 ENV ASPNETCORE_ENVIRONMENT=Development
+ENV TZ=Europe/Paris
 
 WORKDIR /app
 EXPOSE 80
