update launch scripts

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,12 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Run",
+            "type": "process",
+            "command": "docker-compose",
+            "args": ["up"]
+        },
+        {
             "label": "build",
             "command": "dotnet",
             "type": "process",
@@ -14,38 +20,11 @@
             "problemMatcher": "$msCompile"
         },
         {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/services/worker/worker.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "${workspaceFolder}/services/worker/worker.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
             "type": "docker-build",
-            "label": "docker-build: debug",
-            "dependsOn": [
-                "build"
-            ],
+            "label": "Worker: Build",
+            "dependsOn": ["build"],
             "dockerBuild": {
-                "tag": "botplatform:dev",
+                "tag": "bot-worker:dev",
                 "target": "base",
                 "dockerfile": "${workspaceFolder}/services/worker/Dockerfile.dev",
                 "context": "${workspaceFolder}/services/worker",
@@ -56,26 +35,10 @@
             }
         },
         {
-            "type": "docker-build",
-            "label": "docker-build: release",
-            "dependsOn": [
-                "build"
-            ],
-            "dockerBuild": {
-                "tag": "botplatform:latest",
-                "dockerfile": "${workspaceFolder}/services/worker/Dockerfile.dev",
-                "context": "${workspaceFolder}",
-                "pull": true
-            },
-            "netCore": {
-                "appProject": "${workspaceFolder}/services/worker/worker.csproj"
-            }
-        },
-        {
             "type": "docker-run",
-            "label": "docker-run: debug",
+            "label": "Worker: Debug",
             "dependsOn": [
-                "docker-build: debug"
+                "Worker: Build"
             ],
             "dockerRun": {
                 "envFiles": ["${workspaceFolder}/.env"]
@@ -83,17 +46,6 @@
             "netCore": {
                 "appProject": "${workspaceFolder}/services/worker/worker.csproj",
                 "enableDebugging": true
-            }
-        },
-        {
-            "type": "docker-run",
-            "label": "docker-run: release",
-            "dependsOn": [
-                "docker-build: release"
-            ],
-            "dockerRun": {},
-            "netCore": {
-                "appProject": "${workspaceFolder}/services/worker/worker.csproj"
             }
         }
     ]
