--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,43 +1,23 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
-    {
-        "name": ".NET Core Launch (web)",
-        "type": "coreclr",
-        "request": "launch",
-        "preLaunchTask": "build",
-        "program": "${workspaceFolder}/services/worker/bin/Debug/netcoreapp3.1/worker.dll",
-        "args": [],
-        "cwd": "${workspaceFolder}/services/worker",
-        "stopAtEntry": false,
-        "serverReadyAction": {
-            "action": "openExternally",
-            "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        // {
+        //     "name": "",
+        //     "type": "docker",
+        //     "request": "launch",
+            
+        // },
+        {
+            "name": "Worker: Debug",
+            "type": "docker",
+            "request": "launch",
+            "preLaunchTask": "Worker: Debug",
+            "netCore": {
+                "appProject": "${workspaceFolder}/services/worker/worker.csproj"
+            }
         },
-        "env": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        },
-        "sourceFileMap": {
-            "/Views": "${workspaceFolder}/Views"
-        }
-    },
-    {
-        "name": ".NET Core Attach",
-        "type": "coreclr",
-        "request": "attach",
-        "processId": "${command:pickProcess}"
-    },
-    {
-        "name": "Docker .NET Core Launch",
-        "type": "docker",
-        "request": "launch",
-        "preLaunchTask": "docker-run: debug",
-        "netCore": {
-            "appProject": "${workspaceFolder}/services/worker/worker.csproj"
-        }
-    }
-]
+        // {
+
+        // }
+    ]
 }
