--- a/services/worker/Dockerfile.dev
+++ b/services/worker/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 as base
+FROM mcr.microsoft.com/dotnet/sdk:5.0 as base
 ENV ASPNETCORE_URLS=http://+:80
 ENV ASPNETCORE_ENVIRONMENT=Development
 ENV TZ=Europe/Paris
